# scala-native-sbt-jni-example

./: .gitignore  Main.scala  README.md  build.sbt
project/: plugins.sbt
src/native/: CMakeLists.txt  println.c
